everything/gitops/apps/ai/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai
  namespace: ai
  labels:
    app: ai
spec:
  type: ClusterIP
  selector:
    app: ai
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
