everything/gitops/apps/ai/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai
  namespace: ai
spec:
  ingressClassName: traefik
  rules:
    - host: ai.i-tems.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ai
                port:
                  number: 80
